mobile spacing issues and error message display

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -60,7 +60,7 @@ body {
   background-color: white;
 }
 
-#page-content-wrapper {
+#navbar-offset {
   margin-top: $navbar_height;
 }
 
@@ -125,6 +125,13 @@ input, textarea, select, .uneditable-input {
 
 .center {
   text-align: center;
+}
+
+#error-container {
+  position: absolute;
+  left: 0;
+  top: 100px;
+  width: 100%;
 }
 
 /* ============================================
@@ -202,6 +209,12 @@ input, textarea, select, .uneditable-input {
 }
 
 .gradient {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 40%;
+  width: 100%;
+
   background: transparent; /* For browsers that do not support gradients */
   background: -webkit-linear-gradient(bottom, rgba(255,255,255,0), rgba(255,255,255,1)); /*Safari 5.1-6*/
   background: -o-linear-gradient(top, rgba(255,255,255,0), rgba(255,255,255,1)); /*Opera 11.1-12*/
@@ -218,25 +231,25 @@ input, textarea, select, .uneditable-input {
   .foreground {
     background-color: rgba(255, 255, 255, 0.8);
     height: 100%;
-  }
+    position: relative;
 
-  #intro-logo {
-    height: 60%;
+    #homepage-intro-content {
+      position: absolute;
+      top: 50%; left: 50%;
+      transform: translate(-50%,-70%);
 
-    img {
-      width: 60%;
-    }
-  }
+      img {
+        max-width: 850px;
+        width: 80vw;
+      }
 
-  #intro-text {
-    height: 40%;
+      #intro-arrow {
+        font-size: xx-large;
+      }
 
-    #intro-arrow {
-      font-size: xx-large;
-    }
-
-    h3 {
-      font-weight: bold;
+      h3 {
+        font-weight: bold;
+      }
     }
   }
 }
@@ -264,7 +277,7 @@ input, textarea, select, .uneditable-input {
 
   #about-title {
     margin-bottom: 40px;
-    width: 400px;
+    width: 325px;
     margin-left: auto;
     margin-right: auto;
 
@@ -285,6 +298,8 @@ input, textarea, select, .uneditable-input {
     margin-top: 10px;
     color: #333333;
     border: 3px solid #333333;
+    padding-left: 0;
+    padding-right: 0;
 
     &:hover {
       background-color: #333333;
@@ -321,7 +336,7 @@ input, textarea, select, .uneditable-input {
   background-color: #333333;
 
   h1 {
-    font-size: 5.0em;
+    font-size: 4.8em;
   }
 
   .contact-btn {
